made further adjustments

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Home</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/tortillas.html">Tortilla Recipe</a></p>
-    <p><a href="./recipes/chipotlechicken.html">Chipotle Chicken Recipe</a></p>
-    <p><a href="./recipes/picodegallo.html">Pico de Gallo Recipe</a></p>
+    <p id="tortilla"><a href="./recipes/tortillas.html">Tortilla Recipe</a></p>
+    <p id="chipotlechicken"><a href="./recipes/chipotlechicken.html">Chipotle Chicken Recipe</a></p>
+    <p id="picodegallo"><a href="./recipes/picodegallo.html">Pico de Gallo Recipe</a></p>
 
 
 </body>
